refactor: modificar relacion entre las tablas PasajeroViaje y Ubicacion (1..* a 1..1)